<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ultium_car_v2"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="fill"
            android:background="@drawable/text_input_background"
            android:hint="@string/enter_email"
            android:paddingLeft="8dp"
            android:textColorHint="#3D3D3D"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#FFFFFF"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        app:boxBackgroundColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/text_input_background"
            android:hint="@string/enter_password"
            android:paddingLeft="8dp"
            android:textColorHint="#3D3D3D"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/gm_blue_800"
        android:minHeight="48dp"
        android:onClick="btnLoginClick"
        android:paddingLeft="32dp"
        android:paddingTop="6dp"
        android:paddingRight="32dp"
        android:paddingBottom="6dp"
        android:text="@string/login"
        android:textColor="@color/gm_white"
        android:textColorHint="#3D3D3D"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/gm_blue_800"
        android:minHeight="48dp"
        android:onClick="btnSignUpClick"
        android:paddingLeft="32dp"
        android:paddingTop="6dp"
        android:paddingRight="32dp"
        android:paddingBottom="6dp"
        android:text="@string/signup"
        android:textColor="@color/gm_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/background_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ultium_color" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/reset_password"
        android:textColor="@color/gm_blue_600"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>