<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:text="@string/welcome"
        android:textColor="@color/gm_black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="122dp"
        android:layout_height="35dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="76dp"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/welcome_user"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="52dp"
        android:background="#000000"
        android:text="@string/profile_button"
        app:cornerRadius="20dp"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toEndOf="@+id/user_name"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBattery"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        app:cardBackgroundColor="@color/gm_light_grey"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layoutDirection="rtl"
            android:text="@string/battery"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cardViewBatteryPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDistance"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/gm_light_grey"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewBattery">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layoutDirection="rtl"
            android:text="@string/distance"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cardViewDistanceMiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="367dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="#DEECF3"
        android:visibility="visible"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewDistance"
        tools:cardCornerRadius="20dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/scanCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/qrbuttontext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintVertical_bias="0.029" />

    <!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="221dp"-->
<!--        android:layout_height="150dp"-->
<!--        android:layout_marginTop="28dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/searchView"-->
<!--        app:srcCompat="@android:drawable/ic_dialog_map" />-->


</androidx.constraintlayout.widget.ConstraintLayout>